# py-scripts

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  hello.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit-autoupdate.yml  pre-commit.yml  test.yml
.local/: claude_instructions.md  new_scripts_plan.md  project_review.md
action_checker/: Makefile  action_checker.py  test_action_checker.py
clipboardtools/: README.md  clipnotify  notify.py
file_mapper/: Makefile  file_mapper.py  print_changed_file.py  print_changed_file.sh
file_mapper/tests/: test_file_mapper.py
gists/action_checker/: Makefile  action_checker.py  test_action_checker.py
gists/file_mapper/: README.md
gists/make_commit/: make_commit.py
gists/s2t/: transcribe.py
gists/webp_converter/: __init__.py  webp_converter.py
gnulib/: oslib.py
make_commit/: Makefile
make_commit/tests/: test_make_commit.py
multissh/: async_network.py
py-scripts/action_checker/: action_checker.py
py-scripts/make_commit/: Makefile
py-scripts/s2t/: record_audio.py
py-scripts/tmux_picker/: README.md
py-scripts/webp_converter/: webp_converter.py
py_scripts/action_checker/: Makefile  README.md  action_checker.py
py_scripts/clipboardtools/: README.md  clipboard_history.py
py_scripts/cmd_picker/: Makefile  README.md  cmd_picker.py
py_scripts/durable_run/: Makefile  README.md  __init__.py  durable_run.py
py_scripts/file_mapper/: file_mapper.py
py_scripts/multissh/: async_network.py
py_scripts/s2t/: env.example  record.sh  s2t.py  transcribe.py
py_scripts/tmux_picker/: Makefile  __init__.py  (+1 more)
s2t/: record_audio.py
webp_converter/: Makefile  webp_converter.py
(+12 files in other folders)
